# previsao_inadimplencia

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
previsao-inadimplencia/: pyproject.toml
prototype_notebooks/: data_engineering.ipynb  ml_models.ipynb  submissao_case.csv
