[project]
name = "previsao-inadimplencia"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorabdo vitorbeltrao300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "fastparquet (>=2026.3.0,<2027.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
