[project]
name = "previsao-inadimplencia"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorb4yousee",email = "vitor.beltrao@4yousee.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "previsao_inadimplencia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
